fixed z-index issue

--- a/app/css/plex.css
+++ b/app/css/plex.css
@@ -7746,7 +7746,7 @@ h1.plex-icon {
   left: 0;
   right: 0;
   top: 0;
-  z-index: 1;
+  z-index: 3;
   padding: 0 20px;
   min-width: 800px;
   height: 60px;
