--- a/app/less/header.less
+++ b/app/less/header.less
@@ -3,7 +3,7 @@
 	left: 0;
 	right: 0;
 	top: 0;
-	z-index: 1;
+	z-index: 3;
 	padding: 0 20px;
 	min-width: 800px;
 	height: 60px;
